--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				  </div>
 			  </td>
 			  <td style="padding:20px;width:75%;vertical-align:middle">
-				  <a>
+				  <a href="https://ieeexplore.ieee.org/document/9956520">
 					  <span class="papertitle">Evading Deepfake Detectors via High Quality Face Pre-Processing Methods</span>
 				  </a>
 				  <br>
@@ -66,7 +66,6 @@
 				  <br>
 				  <em>ICPR</em>, 2022
 				  <br>
-				  <a href="https://ieeexplore.ieee.org/document/9956520">page</a>
 				  <p>
 					  Concealing deepfake artifacts via image processing procedures.
 				  </p>
