--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Taejune Kim">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
