--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					  <span class="papertitle">Evading Deepfake Detectors via High Quality Face Pre-Processing Methods</span>
 				  </a>
 				  <br>
-				  <a>Jeongho Kim*</a>,
+				  <span>Jeongho Kim*</span>,
 				  <strong>Taejune Kim*</strong>,
 				  <a>Jeonghyeon Kim</a>,
 				  <a>Simon S. Woo</a>
