--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
 				  <br>
 				  <span>Jeongho Kim*</span>,
 				  <strong>Taejune Kim*</strong>,
-				  <a>Jeonghyeon Kim</a>,
-				  <a>Simon S. Woo</a>
+				  <span>Jeonghyeon Kim</span>,
+				  <span>Simon S. Woo</span>
 				  <br>
 				  <em>ICPR</em>, 2022
 				  <br>
 				  <p>
 					  Concealing deepfake artifacts via image processing procedures.
 				  </p>
+				  <br>
 			  </td>
 		  </tr> 
 <!-- 		  <tr onmouseout="recon_stop()" onmouseover="recon_start()" bgcolor="#ffffd0">
