--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Taejune Kim
                 </p>
-                <p>Department of Computer Science and Engineering, Sungkyunkwan University</p>
+                <p>Department of Computer Science and Engineering<br>Sungkyunkwan University</p>
                 <p style="text-align:center">
                   <a href="mailto:taemo@g.skku.edu">Email</a> &nbsp;/&nbsp;
 <!--                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
