--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/agc.png"></td>
+<!--               <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/agc.png"></td> -->
               <td width="75%" valign="center">
-		<a href="http://cvpr2018.thecvf.com/organizers/area_chairs">4th Competition Track 3 - 2nd Place, AGC 2022</a>
+		<span">4th Competition Track 3 - 2nd Place, AGC 2022</span>
 		<br>
-                <a href="http://cvpr2018.thecvf.com/organizers/area_chairs">4th Competition Track 3 - 1st Place, AGC 2021</a>
+                <span>4th Competition Track 3 - 1st Place, AGC 2021</span>
               </td>
             </tr>
             
