--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
             <tr>
 <!--               <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/agc.png"></td> -->
               <td width="75%" valign="center">
-		<span">4th Competition Track 3 - 2nd Place, AGC 2022</span>
+		<span">4th Competition Track 3 - 2nd Place, Artificial Intelligence Grand Challenge (AGC) 2022</span>
 		<br>
-                <span>4th Competition Track 3 - 1st Place, AGC 2021</span>
+                <span>4th Competition Track 3 - 1st Place, Artificial Intelligence Grand Challenge (AGC) 2021</span>
               </td>
             </tr>
             
