--- a/index.html
+++ b/index.html
@@ -80,19 +80,20 @@
 				  </div>
 			  </td>
 			  <td style="padding:20px;width:75%;vertical-align:middle">
-				  <a href="https://ieeexplore.ieee.org/document/9956520">
-					  <span class="papertitle">Evading Deepfake Detectors via High Quality Face Pre-Processing Methods</span>
+				  <a href="https://openaccess.thecvf.com/content/ACCV2022/papers/An_A2_Adaptive_Augmentation_for_Effectively_Mitigating_Dataset_Bias_ACCV_2022_paper.pdf">
+					  <span class="papertitle">A2: Adaptive Augmentation for Effectively Mitigating Dataset Bias</span>
 				  </a>
 				  <br>
-				  <span>Jeongho Kim*</span>,
-				  <strong>Taejune Kim*</strong>,
-				  <span>Jeonghyeon Kim</span>,
+				  <span>Jaeju An</span>,
+				  <strong>Taejune Kim</strong>,
+				  <span>Donggeun Ko</span>,
+				  <span>Sangyup Lee</span>,
 				  <span>Simon S. Woo</span>
 				  <br>
-				  <em>ICPR</em>, 2022
+				  <em>ACCV</em>, 2022
 				  <br>
 				  <p>
-					  Concealing deepfake artifacts via image processing procedures.
+					  Mitigating dataset bias
 				  </p>
 				  <br>
 			  </td>
