--- a/index.html
+++ b/index.html
@@ -52,6 +52,31 @@
 		  <tr>
 			  <td style="padding:20px;width:25%;vertical-align:middle">
 				  <div class="one">
+					  <img src='images/rdetr.png' width="160">
+				  </div>
+			  </td>
+			  <td style="padding:20px;width:75%;vertical-align:middle">
+				  <a href="https://dl.acm.org/doi/abs/10.1145/3555776.3577745">
+					  <span class="papertitle">Rotated-DETR: an End-to-End Transformer-based Oriented Object Detector for Aerial Images</span>
+				  </a>
+				  <br>
+				  <span>Jinbeom Kim*</span>,
+				  <span>Giljun Lee*</span>,
+				  <strong>Taejune Kim</strong>,
+				  <span>Simon S. Woo</span>
+				  <br>
+				  <em>SAC</em>, 2023
+				  <br>
+				  <p>
+					  Inferencing oriented bounding box using Deformable-DETR framework.
+				  </p>
+				  <br>
+			  </td>
+		  </tr> 
+		  
+		  <tr>
+			  <td style="padding:20px;width:25%;vertical-align:middle">
+				  <div class="one">
 					  <img src='images/mgcma.png' width="160">
 				  </div>
 			  </td>
