--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				  <em>SAC</em>, 2023
 				  <br>
 				  <p>
-					  Inferencing oriented bounding box using Deformable-DETR framework.
+					  Inferencing oriented bounding box using Deformable-DETR framework along with iterative proposal refinement and scoring network.
 				  </p>
 				  <br>
 			  </td>
@@ -95,7 +95,7 @@
 				  <em>SAC</em>, 2023
 				  <br>
 				  <p>
-					  Synthesizing contrast-enhanced style on CT scans.
+					  Synthesizing contrast-enhanced style on non-contrast CT scans.
 				  </p>
 				  <br>
 			  </td>
@@ -109,7 +109,7 @@
 			  </td>
 			  <td style="padding:20px;width:75%;vertical-align:middle">
 				  <a href="https://openaccess.thecvf.com/content/ACCV2022/papers/An_A2_Adaptive_Augmentation_for_Effectively_Mitigating_Dataset_Bias_ACCV_2022_paper.pdf">
-					  <span class="papertitle">A2: Adaptive Augmentation for Effectively Mitigating Dataset Bias</span>
+					  <span class="papertitle">A<sup>2</sup>: Adaptive Augmentation for Effectively Mitigating Dataset Bias</span>
 				  </a>
 				  <br>
 				  <span>Jaeju An</span>,
@@ -121,7 +121,7 @@
 				  <em>ACCV</em>, 2022
 				  <br>
 				  <p>
-					  Mitigating dataset bias
+					  Mitigating dataset bias through domain adaptation.
 				  </p>
 				  <br>
 			  </td>
