--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				  <em>SAC</em>, 2023
 				  <br>
 				  <p>
-					  Inferencing oriented bounding box using Deformable-DETR framework along with iterative proposal refinement and scoring network.
+					  Inferencing oriented bounding box using Deformable-DETR framework.
 				  </p>
 				  <br>
 			  </td>
