--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/taejune.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/taejune.jpg" class="hoverZoomLink"></a>
+                <a href="images/taejune.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/taejune_suit.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
