--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			  </td>
 		  </tr> 
 		  
-		  <tr bgcolor="#ffffd0">
+		  <tr bgcolor="#e2f0d9">
 			  <td style="padding:20px;width:25%;vertical-align:middle">
 				  <div class="one">
 					  <img src='images/evading.png' width="160">
