--- a/index.html
+++ b/index.html
@@ -224,7 +224,11 @@
 			  <td>
 				  <h2>Awards</h2>
 				  <p>
-					  <span>4th Competition Track 3 - 2nd Place, Artificial Intelligence Grand Challenge (AGC) 2022</span>
+					  <span>4th Competition Track 3 - 2nd Place, Artificial Intelligence Grand Challenge 2022 (AGC 2022)</span>
+					  <br>
+					  <span>Excellent Paper Award, Korean Artificial Intelligence Association (KAIA 2022)</span>
+					  <br>
+					  <span>Excellent Paper Award in Artificial Intelligence track, Korea Computer Congress 2022 (KCC 2022)</span>
 					  <br>
 					  <span>4th Competition Track 3 - 1st Place, Artificial Intelligence Grand Challenge (AGC) 2021</span>
 				  </p>
