--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Taejune Kim">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon/favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon/globe/favicon.ico?">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
@@ -224,13 +224,13 @@
 			  <td>
 				  <h2>Awards</h2>
 				  <p>
-					  <span>4th Competition Track 3 - <strong>2nd Place</strong>, Artificial Intelligence Grand Challenge 2022 (AGC 2022)</span>
+					  <span><strong>2nd Place</strong>, Artificial Intelligence Grand Challenge 2022 (AGC 2022) - 4th Competition Track 3</span>
 					  <br>
 					  <span><strong>Excellent Paper Award</strong>, Korean Artificial Intelligence Association (KAIA 2022)</span>
 					  <br>
 					  <span><strong>Excellent Paper Award</strong> in Artificial Intelligence track, Korea Computer Congress 2022 (KCC 2022)</span>
 					  <br>
-					  <span>4th Competition Track 3 - <strong>1st Place</strong>, Artificial Intelligence Grand Challenge (AGC) 2021</span>
+					  <span><strong>1st Place</strong>, Artificial Intelligence Grand Challenge 2021 (AGC 2021) - 4th Competition Track 3</span>
 				  </p>
 			  </td>
             </tr>
