--- a/index.html
+++ b/index.html
@@ -52,6 +52,32 @@
 		  <tr>
 			  <td style="padding:20px;width:25%;vertical-align:middle">
 				  <div class="one">
+					  <img src='images/grad.png' width="160">
+				  </div>
+			  </td>
+			  <td style="padding:20px;width:75%;vertical-align:middle">
+				  <a href="https://github.com/tae-mo/GRAD">
+					  <span class="papertitle">Grid-Based Continuous Normal Representation for Anomaly Detection</span>
+				  </a>
+				  <br>
+				  <span>Joo Chan Lee*</span>,
+				  <strong>Taejune Kim</strong>,
+				  <span>Eunbyund Park</span>,
+				  <span>Simon S. Woo</span>,
+				  <span>Jong Hwan Ko</span>
+				  <br>
+				  <em>under review</em>
+				  <br>
+				  <p>
+					  Unified framework for unsupervised anomaly detection.
+				  </p>
+				  <br>
+			  </td>
+		  </tr> 
+		  
+		  <tr>
+			  <td style="padding:20px;width:25%;vertical-align:middle">
+				  <div class="one">
 					  <img src='images/rdetr.png' width="160">
 				  </div>
 			  </td>
