--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 				  <br>
 				  <em>under review</em>
 				  <br>
+				  <a href="">project page</a> &nbsp;/&nbsp;
+				  <a href="https://github.com/tae-mo/GRAD">code</a>
+				  <br>
 				  <p>
 					  Unified framework for unsupervised anomaly detection.
 				  </p>
