--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				  </a>
 				  <br>
 				  <span>Joo Chan Lee*</span>,
-				  <strong>Taejune Kim</strong>,
+				  <strong>Taejune Kim*</strong>,
 				  <span>Eunbyund Park</span>,
 				  <span>Simon S. Woo</span>,
 				  <span>Jong Hwan Ko</span>
