--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				  <br>
 				  <em>under review</em>
 				  <br>
-				  <a href="">project page</a> &nbsp;/&nbsp;
+				  <a href="">project page</a> /
 				  <a href="https://github.com/tae-mo/GRAD">code</a>
 				  <br>
 				  <p>
