--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </tbody></table>
 		
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-		  <tr>
+		  <tr bgcolor="#fff2cc">
 			  <td style="padding:20px;width:25%;vertical-align:middle">
 				  <div class="one">
 					  <img src='images/grad.png' width="160">
