--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				  <br>
 				  <span>Joo Chan Lee*</span>,
 				  <strong>Taejune Kim*</strong>,
-				  <span>Eunbyund Park</span>,
+				  <span>Eunbyung Park</span>,
 				  <span>Simon S. Woo</span>,
 				  <span>Jong Hwan Ko</span>
 				  <br>
