--- a/grad/index.html
+++ b/grad/index.html
@@ -151,13 +151,7 @@
             In an evaluation using the MVTec AD dataset, GRAD significantly outperforms the previous state-of-the-art method by reducing 65.0\% of the error for multi-class unified anomaly detection.
         </p>
       </div>
-      <img width="100%" src="./static/images/method.png"></img>
-      <p>
-        Nuvo uses a neural field to represent a given scene's UV mapping.
-        A "chart assignment" MLP c outputs probabilities for a categorical distribution over charts for any surface point x,
-        "texture coordinate" MLPs t map from 3D points x to 2D UV coordinates u, and ``surface coordinate'' MLPs s map from 2D UV coordinates to 3D points on the surface.
-        Here we visualize Nuvo's learned mappings for charts 1 and 3 in an atlas consisting of 4 charts.
-      </p>
+      <img width="100%" src="./static/images/grid_feature.png"></img>
       <!-- / Abstract. -->
 
     </div>
@@ -189,26 +183,212 @@
   <section class="section">
     <div class="container is-max-desktop">
       <h2 class="title is-3">Detection & Localization Performance</h2>
-      <table>
-          | Class      | US                 | PaDiM              | MKD                | DRAEM              | RD4AD              | PatchCore          | UniAD              | HVQ-Trans       | GRAD (Ours)             |
-          |:----------:|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|:---------------:|:-----------------------:|
-          | Bottle     | 84.0 / 99.0 | 97.9 / 99.9 | 98.7 / 99.4 | 97.5 / 99.2 | 98.7 / 100  | 100 / 100   | 99.7 / 100  | 100 / -  | 100±0.00 / 100   |
-          | Cable      | 60.0 / 86.2 | 70.9 / 92.7 | 78.2 / 89.2 | 57.8 / 91.8 | 85.0 / 95.0 | 99.7 / 99.4 | 95.2 / 97.6 | 99.0 / - | 99.5±0.15 / 99.8 |
-          | Capsule    | 57.6 / 86.1 | 73.4 / 91.3 | 68.3 / 80.5 | 65.3 / 98.5 | 95.5 / 96.3 | 90.9 / 97.8 | 86.9 / 85.3 | 95.4 / - | 96.9±0.37 / 97.9 |
-          | Hazelnut   | 95.8 / 93.1 | 85.5 / 92.0 | 97.1 / 98.4 | 93.7 / 100  | 87.1 / 99.9 | 100 / 100   | 99.8 / 99.9 | 100 / -  | 99.9±0.09 / 100  |
-          | Metal Nut  | 62.7 / 82.0 | 88.0 / 98.7 | 64.9 / 73.6 | 72.8 / 98.7 | 99.4 / 100  | 99.9 / 100  | 99.2 / 99.0 | 99.9 / - | 99.9±0.08 / 99.9 |
-          | Pill       | 56.1 / 87.9 | 68.8 / 93.3 | 79.7 / 82.7 | 82.2 / 98.9 | 52.6 / 96.6 | 96.9 / 96.0 | 93.7 / 88.3 | 95.8 / - | 97.8±0.37 / 98.7 |
-          | Screw      | 66.9 / 54.9 | 56.9 / 85.8 | 75.6 / 83.3 | 92 / 93.9   | 97.3 / 97.0 | 90.1 / 97.0 | 87.5 / 91.9 | 95.6 / - | 97.5±0.43 / 99.0 |
-          | Toothbrush | 57.8 / 95.3 | 95.3 / 96.1 | 75.3 / 92.2 | 90.6 / 100  | 99.4 / 99.5 | 100 / 99.7  | 94.2 / 95.0 | 93.6 / - | 99.3±0.13 / 97.2 |
-          | Transistor | 61.0 / 81.8 | 86.6 / 97.4 | 73.4 / 85.6 | 74.8 / 93.1 | 92.4 / 96.7 | 99.7 / 100  | 99.8 / 100  | 99.7 / - | 99.9±0.09 / 99.9 |
-          | Zipper     | 78.6 / 91.9 | 79.7 / 90.3 | 87.4 / 93.2 | 98.8 / 100  | 99.6 / 98.5 | 94.7 / 99.5 | 95.8 / 96.7 | 97.9 / - | 99.2±0.15 / 99.2 |
-          | Carpet     | 86.6 / 91.6 | 93.8 / 99.8 | 69.8 / 79.3 | 98.0 / 97.0 | 97.1 / 98.9 | 97.1 / 98.7 | 99.8 / 99.9 | 99.9 / - | 100±0.03 / 100   |
-          | Grid       | 69.2 / 81.0 | 73.9 / 96.7 | 83.8 / 78.0 | 99.3 / 99.9 | 99.7 / 100  | 96.3 / 97.9 | 98.2 / 98.5 | 97.0 / - | 100±0.0 / 100    |
-          | Leather    | 97.2 / 88.2 | 99.9 / 100  | 93.6 / 95.1 | 98.7 / 100  | 100 / 100   | 100 / 100   | 100 / 100   | 100 / -  | 100±0.00 / 100   |
-          | Tile       | 93.7 / 99.1 | 93.3 / 98.1 | 89.5 / 91.6 | 99.8 / 99.6 | 97.5 / 99.3 | 99.0 / 98.9 | 99.3 / 99.0 | 99.2 / - | 100±0.00 / 100   |
-          | Wood       | 90.6 / 97.7 | 98.4 / 99.2 | 93.4 / 94.3 | 99.8 / 99.1 | 99.2 / 99.2 | 99.5 / 99.0 | 98.6 / 97.9 | 97.2 / - | 99.4±0.13 / 99.7 |
-          | Mean       | 74.5 / 87.7 | 84.2 / 95.5 | 81.9 / 87.8 | 88.1 / 98.0 | 93.4 / 98.5 | 97.6 / 99.0 | 96.5 / 96.6 | 98.0 / - | 99.3±0.14 / 99.4 |
-      </table>
+<table>
+    <tr>
+        <td>Class</td>
+        <td>US</td>
+        <td>PaDiM</td>
+        <td>MKD</td>
+        <td>DRAEM</td>
+        <td>RD4AD</td>
+        <td>PatchCore</td>
+        <td>UniAD</td>
+        <td>HVQ-Trans</td>
+        <td>GRAD (Ours)</td>
+    </tr>
+    <tr>
+        <td>Bottle</td>
+        <td>84.0 / 99.0</td>
+        <td>97.9 / 99.9</td>
+        <td>98.7 / 99.4</td>
+        <td>97.5 / 99.2</td>
+        <td>98.7 / 100</td>
+        <td>100 / 100</td>
+        <td>99.7 / 100</td>
+        <td>100 / -</td>
+        <td>100±0.00 / 100</td>
+    </tr>
+    <tr>
+        <td>Cable</td>
+        <td>60.0 / 86.2</td>
+        <td>70.9 / 92.7</td>
+        <td>78.2 / 89.2</td>
+        <td>57.8 / 91.8</td>
+        <td>85.0 / 95.0</td>
+        <td>99.7 / 99.4</td>
+        <td>95.2 / 97.6</td>
+        <td>99.0 / -</td>
+        <td>99.5±0.15 / 99.8</td>
+    </tr>
+    <tr>
+        <td>Capsule</td>
+        <td>57.6 / 86.1</td>
+        <td>73.4 / 91.3</td>
+        <td>68.3 / 80.5</td>
+        <td>65.3 / 98.5</td>
+        <td>95.5 / 96.3</td>
+        <td>90.9 / 97.8</td>
+        <td>86.9 / 85.3</td>
+        <td>95.4 / -</td>
+        <td>96.9±0.37 / 97.9</td>
+    </tr>
+    <tr>
+        <td>Hazelnut</td>
+        <td>95.8 / 93.1</td>
+        <td>85.5 / 92.0</td>
+        <td>97.1 / 98.4</td>
+        <td>93.7 / 100</td>
+        <td>87.1 / 99.9</td>
+        <td>100 / 100</td>
+        <td>99.8 / 99.9</td>
+        <td>100 / -</td>
+        <td>99.9±0.09 / 100</td>
+    </tr>
+    <tr>
+        <td>Metal Nut</td>
+        <td>62.7 / 82.0</td>
+        <td>88.0 / 98.7</td>
+        <td>64.9 / 73.6</td>
+        <td>72.8 / 98.7</td>
+        <td>99.4 / 100</td>
+        <td>99.9 / 100</td>
+        <td>99.2 / 99.0</td>
+        <td>99.9 / -</td>
+        <td>99.9±0.08 / 99.9</td>
+    </tr>
+    <tr>
+        <td>Pill</td>
+        <td>56.1 / 87.9</td>
+        <td>68.8 / 93.3</td>
+        <td>79.7 / 82.7</td>
+        <td>82.2 / 98.9</td>
+        <td>52.6 / 96.6</td>
+        <td>96.9 / 96.0</td>
+        <td>93.7 / 88.3</td>
+        <td>95.8 / -</td>
+        <td>97.8±0.37 / 98.7</td>
+    </tr>
+    <tr>
+        <td>Screw</td>
+        <td>66.9 / 54.9</td>
+        <td>56.9 / 85.8</td>
+        <td>75.6 / 83.3</td>
+        <td>92 / 93.9</td>
+        <td>97.3 / 97.0</td>
+        <td>90.1 / 97.0</td>
+        <td>87.5 / 91.9</td>
+        <td>95.6 / -</td>
+        <td>97.5±0.43 / 99.0</td>
+    </tr>
+    <tr>
+        <td>Toothbrush</td>
+        <td>57.8 / 95.3</td>
+        <td>95.3 / 96.1</td>
+        <td>75.3 / 92.2</td>
+        <td>90.6 / 100</td>
+        <td>99.4 / 99.5</td>
+        <td>100 / 99.7</td>
+        <td>94.2 / 95.0</td>
+        <td>93.6 / -</td>
+        <td>99.3±0.13 / 97.2</td>
+    </tr>
+    <tr>
+        <td>Transistor</td>
+        <td>61.0 / 81.8</td>
+        <td>86.6 / 97.4</td>
+        <td>73.4 / 85.6</td>
+        <td>74.8 / 93.1</td>
+        <td>92.4 / 96.7</td>
+        <td>99.7 / 100</td>
+        <td>99.8 / 100</td>
+        <td>99.7 / -</td>
+        <td>99.9±0.09 / 99.9</td>
+    </tr>
+    <tr>
+        <td>Zipper</td>
+        <td>78.6 / 91.9</td>
+        <td>79.7 / 90.3</td>
+        <td>87.4 / 93.2</td>
+        <td>98.8 / 100</td>
+        <td>99.6 / 98.5</td>
+        <td>94.7 / 99.5</td>
+        <td>95.8 / 96.7</td>
+        <td>97.9 / -</td>
+        <td>99.2±0.15 / 99.2</td>
+    </tr>
+    <tr>
+        <td>Carpet</td>
+        <td>86.6 / 91.6</td>
+        <td>93.8 / 99.8</td>
+        <td>69.8 / 79.3</td>
+        <td>98.0 / 97.0</td>
+        <td>97.1 / 98.9</td>
+        <td>97.1 / 98.7</td>
+        <td>99.8 / 99.9</td>
+        <td>99.9 / -</td>
+        <td>100±0.03 / 100</td>
+    </tr>
+    <tr>
+        <td>Grid</td>
+        <td>69.2 / 81.0</td>
+        <td>73.9 / 96.7</td>
+        <td>83.8 / 78.0</td>
+        <td>99.3 / 99.9</td>
+        <td>99.7 / 100</td>
+        <td>96.3 / 97.9</td>
+        <td>98.2 / 98.5</td>
+        <td>97.0 / -</td>
+        <td>100±0.0 / 100</td>
+    </tr>
+    <tr>
+        <td>Leather</td>
+        <td>97.2 / 88.2</td>
+        <td>99.9 / 100</td>
+        <td>93.6 / 95.1</td>
+        <td>98.7 / 100</td>
+        <td>100 / 100</td>
+        <td>100 / 100</td>
+        <td>100 / 100</td>
+        <td>100 / -</td>
+        <td>100±0.00 / 100</td>
+    </tr>
+    <tr>
+        <td>Tile</td>
+        <td>93.7 / 99.1</td>
+        <td>93.3 / 98.1</td>
+        <td>89.5 / 91.6</td>
+        <td>99.8 / 99.6</td>
+        <td>97.5 / 99.3</td>
+        <td>99.0 / 98.9</td>
+        <td>99.3 / 99.0</td>
+        <td>99.2 / -</td>
+        <td>100±0.00 / 100</td>
+    </tr>
+    <tr>
+        <td>Wood</td>
+        <td>90.6 / 97.7</td>
+        <td>98.4 / 99.2</td>
+        <td>93.4 / 94.3</td>
+        <td>99.8 / 99.1</td>
+        <td>99.2 / 99.2</td>
+        <td>99.5 / 99.0</td>
+        <td>98.6 / 97.9</td>
+        <td>97.2 / -</td>
+        <td>99.4±0.13 / 99.7</td>
+    </tr>
+    <tr>
+        <td>Mean</td>
+        <td>74.5 / 87.7</td>
+        <td>84.2 / 95.5</td>
+        <td>81.9 / 87.8</td>
+        <td>88.1 / 98.0</td>
+        <td>93.4 / 98.5</td>
+        <td>97.6 / 99.0</td>
+        <td>96.5 / 96.6</td>
+        <td>98.0 / -</td>
+        <td>99.3±0.14 / 99.4</td>
+    </tr>
+</table>
     </div>
   </section>
 
