--- a/grad/index.html
+++ b/grad/index.html
@@ -105,10 +105,8 @@
     </div>
   </section>
 
-  <section class="hero teaser">
-    <div>
-      <img width="100%" src="./static/images/architecture.png"></img>
-    </div>
+  <section class="section">
+    <img width="100%" src="./static/images/architecture.png"></img>
   </section>
 
   <hr />
