--- a/grad/index.html
+++ b/grad/index.html
@@ -106,7 +106,9 @@
   </section>
 
   <section class="section">
-    <img width="100%" src="./static/images/architecture.png"></img>
+    <div>
+      <img width="100%" src="./static/images/architecture.png"></img>
+    </div>
   </section>
 
   <hr />
