--- a/grad/index.html
+++ b/grad/index.html
@@ -110,7 +110,7 @@
       <h2 class="title is-3">Architecture</h2>
       <img width="100%" src="./static/images/architecture.png"></img>
       <p>
-        (a) The detailed architecture of GRAD and (b) visualization of coordinate jittering. The input $x$ is firstly transformed into pixel-wise and feature-wise coordinates. After the normal features are sampled from local and global representations, they are fused by CNN blocks. The final reconstruction is acquired through the proposed feature refinement process.
+        (a) The detailed architecture of GRAD and (b) visualization of coordinate jittering. The input x is firstly transformed into pixel-wise and feature-wise coordinates. After the normal features are sampled from local and global representations, they are fused by CNN blocks. The final reconstruction is acquired through the proposed feature refinement process.
       </p>
     </div>
   </section>
@@ -129,7 +129,7 @@
             To tackle all of the above challenges, we propose GRAD, a novel anomaly detection method for representing normal features within a ``continuous'' feature space, enabled by transforming spatial features into coordinates and mapping them to continuous grids. 
             Furthermore, we carefully design the grids tailored for anomaly detection, representing both local and global normal features and fusing them effectively.
             Our extensive experiments demonstrate that GRAD successfully generalizes the normal features and mitigates the identity shortcut, furthermore, GRAD effectively handles diverse classes in a single model thanks to the high-granularity global representation.
-            In an evaluation using the MVTec AD dataset, GRAD significantly outperforms the previous state-of-the-art method by reducing 65.0\% of the error for multi-class unified anomaly detection.
+            In an evaluation using the MVTec AD dataset, GRAD significantly outperforms the previous state-of-the-art method by reducing 65.0% of the error for multi-class unified anomaly detection.
         </p>
       </div>
       <img width="100%" src="./static/images/grid_feature.png"></img>
@@ -141,24 +141,6 @@
   </section>
 
   <hr/>
-
-  <section class="section">
-    <div class="container is-max-desktop">
-      <!-- Video. -->
-      <h2 class="title is-3">Video</h2>
-      <!-- Paper video. -->
-      <div class="container is-max-desktop">
-        <!-- <h2 class="title is-3">Video</h2> -->
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/hmJiOSTDQZI?si=Xq4TWH4D9BwMmlp7"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-      <!--/ Paper video. -->
-    </div>
-  </section>
-
   <hr/>
 
   <section class="section">
