--- a/grad/index.html
+++ b/grad/index.html
@@ -146,7 +146,7 @@
   <section class="section">
     <div class="container is-max-desktop">
       <h2 class="title is-3">Detection & Localization Performance</h2>
-<table>
+<table style="width:100%;">
     <tr>
         <td>Class</td>
         <td>US</td>
