--- a/grad/index.html
+++ b/grad/index.html
@@ -147,7 +147,7 @@
     <div class="container is-max-desktop">
       <h2 class="title is-3">Detection & Localization Performance</h2>
 <table style="width:100%;">
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Class</td>
         <td>US</td>
         <td>PaDiM</td>
@@ -159,7 +159,7 @@
         <td>HVQ-Trans</td>
         <td>GRAD (Ours)</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Bottle</td>
         <td>84.0 / 99.0</td>
         <td>97.9 / 99.9</td>
@@ -171,7 +171,7 @@
         <td>100 / -</td>
         <td>100±0.00 / 100</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Cable</td>
         <td>60.0 / 86.2</td>
         <td>70.9 / 92.7</td>
@@ -183,7 +183,7 @@
         <td>99.0 / -</td>
         <td>99.5±0.15 / 99.8</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Capsule</td>
         <td>57.6 / 86.1</td>
         <td>73.4 / 91.3</td>
@@ -195,7 +195,7 @@
         <td>95.4 / -</td>
         <td>96.9±0.37 / 97.9</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Hazelnut</td>
         <td>95.8 / 93.1</td>
         <td>85.5 / 92.0</td>
@@ -207,7 +207,7 @@
         <td>100 / -</td>
         <td>99.9±0.09 / 100</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Metal Nut</td>
         <td>62.7 / 82.0</td>
         <td>88.0 / 98.7</td>
@@ -219,7 +219,7 @@
         <td>99.9 / -</td>
         <td>99.9±0.08 / 99.9</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Pill</td>
         <td>56.1 / 87.9</td>
         <td>68.8 / 93.3</td>
@@ -231,7 +231,7 @@
         <td>95.8 / -</td>
         <td>97.8±0.37 / 98.7</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Screw</td>
         <td>66.9 / 54.9</td>
         <td>56.9 / 85.8</td>
@@ -243,7 +243,7 @@
         <td>95.6 / -</td>
         <td>97.5±0.43 / 99.0</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Toothbrush</td>
         <td>57.8 / 95.3</td>
         <td>95.3 / 96.1</td>
@@ -255,7 +255,7 @@
         <td>93.6 / -</td>
         <td>99.3±0.13 / 97.2</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Transistor</td>
         <td>61.0 / 81.8</td>
         <td>86.6 / 97.4</td>
@@ -267,7 +267,7 @@
         <td>99.7 / -</td>
         <td>99.9±0.09 / 99.9</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Zipper</td>
         <td>78.6 / 91.9</td>
         <td>79.7 / 90.3</td>
@@ -279,7 +279,7 @@
         <td>97.9 / -</td>
         <td>99.2±0.15 / 99.2</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Carpet</td>
         <td>86.6 / 91.6</td>
         <td>93.8 / 99.8</td>
@@ -291,7 +291,7 @@
         <td>99.9 / -</td>
         <td>100±0.03 / 100</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Grid</td>
         <td>69.2 / 81.0</td>
         <td>73.9 / 96.7</td>
@@ -303,7 +303,7 @@
         <td>97.0 / -</td>
         <td>100±0.0 / 100</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Leather</td>
         <td>97.2 / 88.2</td>
         <td>99.9 / 100</td>
@@ -315,7 +315,7 @@
         <td>100 / -</td>
         <td>100±0.00 / 100</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Tile</td>
         <td>93.7 / 99.1</td>
         <td>93.3 / 98.1</td>
@@ -327,7 +327,7 @@
         <td>99.2 / -</td>
         <td>100±0.00 / 100</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Wood</td>
         <td>90.6 / 97.7</td>
         <td>98.4 / 99.2</td>
@@ -339,7 +339,7 @@
         <td>97.2 / -</td>
         <td>99.4±0.13 / 99.7</td>
     </tr>
-    <tr>
+    <tr stype="border-top: 1px solid black;">
         <td>Mean</td>
         <td>74.5 / 87.7</td>
         <td>84.2 / 95.5</td>
