--- a/grad/index.html
+++ b/grad/index.html
@@ -148,16 +148,16 @@
       <h2 class="title is-3">Detection & Localization Performance</h2>
 <table style="width:100%;">
     <tr stype="border-top: 1px solid black;">
-        <td>Class</td>
-        <td>US</td>
-        <td>PaDiM</td>
-        <td>MKD</td>
-        <td>DRAEM</td>
-        <td>RD4AD</td>
-        <td>PatchCore</td>
-        <td>UniAD</td>
-        <td>HVQ-Trans</td>
-        <td>GRAD (Ours)</td>
+        <th>Class</th>
+        <th>US</th>
+        <th>PaDiM</th>
+        <th>MKD</th>
+        <th>DRAEM</th>
+        <th>RD4AD</th>
+        <th>PatchCore</th>
+        <th>UniAD</th>
+        <th>HVQ-Trans</th>
+        <th>GRAD (Ours)</th>
     </tr>
     <tr stype="border-top: 1px solid black;">
         <td>Bottle</td>
