--- a/grad/index.html
+++ b/grad/index.html
@@ -146,6 +146,7 @@
   <section class="section">
     <div class="container is-max-desktop">
       <h2 class="title is-3">Detection & Localization Performance</h2>
+      <img width="100%" src="./static/images/qual.png"></img>
 <table style="width:100%;">
     <tr stype="border-top: 1px solid black;">
         <th>Class</th>
