--- a/grad/index.html
+++ b/grad/index.html
@@ -108,10 +108,7 @@
   <section class="section">
     <div class="container is-max-desktop">
       <h2 class="title is-3">Architecture</h2>
-      <img width="100%" src="./static/images/architecture.png"></img>
-      <p>
-        (a) The detailed architecture of GRAD and (b) visualization of coordinate jittering. The input x is firstly transformed into pixel-wise and feature-wise coordinates. After the normal features are sampled from local and global representations, they are fused by CNN blocks. The final reconstruction is acquired through the proposed feature refinement process.
-      </p>
+      <img width="100%" src="./static/images/demo.png"></img>
     </div>
   </section>
 
@@ -132,12 +129,16 @@
             In an evaluation using the MVTec AD dataset, GRAD significantly outperforms the previous state-of-the-art method by reducing 65.0% of the error for multi-class unified anomaly detection.
         </p>
       </div>
-      <img width="100%" src="./static/images/grid_feature.png"></img>
+      <img width="100%" src="./static/images/demo.png"></img>
       <!-- / Abstract. -->
 
     </div>
 
     </div>
+  </section>
+
+  <section>
+    <img width="100%" src="./static/images/grid_feature.png"></img>
   </section>
 
   <hr/>
