--- a/grad/index.html
+++ b/grad/index.html
@@ -107,12 +107,12 @@
 
   <section class="section">
     <div class="container is-max-desktop">
-      <h2 class="title is-3">Architecture</h2>
+      <h2 class="title is-3">Main Idea</h2>
       <img width="100%" src="./static/images/demo.png"></img>
     </div>
   </section>
 
-  <hr />
+  <hr/>
 
   <section class="section">
     <div class="container is-max-desktop">
@@ -129,7 +129,7 @@
             In an evaluation using the MVTec AD dataset, GRAD significantly outperforms the previous state-of-the-art method by reducing 65.0% of the error for multi-class unified anomaly detection.
         </p>
       </div>
-      <img width="100%" src="./static/images/demo.png"></img>
+      <img width="100%" src="./static/images/architecture.png"></img>
       <!-- / Abstract. -->
 
     </div>
