--- a/grad/index.html
+++ b/grad/index.html
@@ -138,7 +138,9 @@
   </section>
 
   <section>
-    <img width="100%" src="./static/images/grid_feature.png"></img>
+    <div class="container is-max-desktop">
+      <img width="100%" src="./static/images/grid_feature.png"></img>
+    </div>
   </section>
 
   <hr/>
