--- a/grad/index.html
+++ b/grad/index.html
@@ -131,13 +131,12 @@
       </div>
       <img width="100%" src="./static/images/architecture.png"></img>
       <!-- / Abstract. -->
-
     </div>
-
     </div>
   </section>
 
-  <section>
+  <section class="section">
+    <h2 class="title is-3">Efficacy of Continuous Space</h2>
     <div class="container is-max-desktop">
       <img width="100%" src="./static/images/grid_feature.png"></img>
     </div>
