--- a/grad/index.html
+++ b/grad/index.html
@@ -129,7 +129,7 @@
       </div>
       <img width="100%" src="./static/images/architecture.png"></img>
       <p>
-        (a) The detailed architecture of GRAD and (b) visualization of coordinate jittering. The input $x$ is firstly transformed into pixel-wise and feature-wise coordinates. After the normal features are sampled from local and global representations, they are fused by CNN blocks. The final reconstruction is acquired through the proposed feature refinement process.
+        (a) The detailed architecture of GRAD and (b) visualization of coordinate jittering. The input x is firstly transformed into pixel-wise and feature-wise coordinates. After the normal features are sampled from local and global representations, they are fused by CNN blocks. The final reconstruction is acquired through the proposed feature refinement process.
       </p>
       <!-- / Abstract. -->
     </div>
